--- a/.github/workflows/publish_collab_image.yml
+++ b/.github/workflows/publish_collab_image.yml
@@ -28,17 +28,16 @@ jobs:
           clean: false
           submodules: 'recursive'
 
-      - name: Check that tag version matches package version
+      - name: Determine version
         run: |
           set -eu
-          crate_version=$(script/get-crate-version collab)
-          tag_version=$(echo $GITHUB_REF_NAME | sed -e 's/collab-v//')
-          if [[ $tag_version != $crate_version ]]; then
-            echo "collab crate version $crate_version does not match git tag version $tag_version"
+          version=$(script/get-crate-version collab)
+          if [[ $GITHUB_REF_NAME != "collab-v${version}" ]]; then
+            echo "release tag ${GITHUB_REF_NAME} does not match version ${version}"
             exit 1
           fi
-          echo "Publishing collab version: $crate_version"
-          echo "COLLAB_VERSION=$crate_version" >> $GITHUB_ENV
+          echo "Publishing collab version: ${version}"
+          echo "COLLAB_VERSION=${version}" >> $GITHUB_ENV
 
       - name: Build docker image
         run: docker build . --tag registry.digitalocean.com/zed/collab:v${COLLAB_VERSION}
