--- a/crates/db/Cargo.toml
+++ b/crates/db/Cargo.toml
@@ -26,3 +26,4 @@ serde_rusqlite = "0.31.0"
 [dev-dependencies]
 gpui = { path = "../gpui", features = ["test-support"] }
 tempdir = { version = "0.3.7" }
+env_logger = "0.9.1"
