--- a/crates/db/Cargo.toml
+++ b/crates/db/Cargo.toml
@@ -21,6 +21,8 @@ async-trait = "0.1"
 lazy_static = "1.4.0"
 log = { version = "0.4.16", features = ["kv_unstable_serde"] }
 parking_lot = "0.11.1"
+serde = { version = "1.0", features = ["derive"] }
+bincode = "1.2.1"
 
 
 [dev-dependencies]
