--- a/crates/picker/Cargo.toml
+++ b/crates/picker/Cargo.toml
@@ -16,6 +16,8 @@ util = { path = "../util" }
 theme = { path = "../theme" }
 workspace = { path = "../workspace" }
 
+parking_lot = "0.11.1"
+
 [dev-dependencies]
 gpui = { path = "../gpui", features = ["test-support"] }
 serde_json = { version = "1.0", features = ["preserve_order"] }
