--- a/crates/collab/Cargo.toml
+++ b/crates/collab/Cargo.toml
@@ -50,8 +50,9 @@ tracing-log = "0.1.3"
 tracing-subscriber = { version = "0.3.11", features = ["env-filter", "json"] }
 
 [dependencies.sqlx]
-version = "0.6"
-features = ["runtime-tokio-rustls", "postgres", "time", "uuid"]
+# version = "0.6"
+path = "../../../sqlx"
+features = ["runtime-tokio-rustls", "postgres", "json", "time", "uuid"]
 
 [dev-dependencies]
 collections = { path = "../collections", features = ["test-support"] }
@@ -77,6 +78,11 @@ util = { path = "../util" }
 lazy_static = "1.4"
 serde_json = { version = "1.0", features = ["preserve_order"] }
 unindent = "0.1"
+
+[dev-dependencies.sqlx]
+# version = "0.6"
+path = "../../../sqlx"
+features = ["sqlite"]
 
 [features]
 seed-support = ["clap", "lipsum", "reqwest"]
