--- a/crates/collab/Cargo.toml
+++ b/crates/collab/Cargo.toml
@@ -50,8 +50,8 @@ tracing-log = "0.1.3"
 tracing-subscriber = { version = "0.3.11", features = ["env-filter", "json"] }
 
 [dependencies.sqlx]
-# version = "0.6"
-path = "../../../sqlx"
+git = "https://github.com/zed-industries/sqlx"
+rev = "a3488181818e2094f12c7eae59cdfacd254d50b3"
 features = ["runtime-tokio-rustls", "postgres", "json", "time", "uuid"]
 
 [dev-dependencies]
@@ -80,8 +80,8 @@ serde_json = { version = "1.0", features = ["preserve_order"] }
 unindent = "0.1"
 
 [dev-dependencies.sqlx]
-# version = "0.6"
-path = "../../../sqlx"
+git = "https://github.com/zed-industries/sqlx"
+rev = "a3488181818e2094f12c7eae59cdfacd254d50b3"
 features = ["sqlite"]
 
 [features]
