Fix compile errors in seed script, ensure it is compiled on CI
Co-authored-by: Nate Butler <nate@zed.dev>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
         run: cargo build -p collab
 
       - name: Build other binaries
-        run: cargo build --bins --all-features 
+        run: cargo build --workspace --bins --all-features
 
   bundle:
     name: Bundle app
