Distributed database pattern built.
Co-Authored-By: kay@zed.dev

--- a/crates/gpui/Cargo.toml
+++ b/crates/gpui/Cargo.toml
@@ -17,6 +17,7 @@ collections = { path = "../collections" }
 gpui_macros = { path = "../gpui_macros" }
 util = { path = "../util" }
 sum_tree = { path = "../sum_tree" }
+sqlez = { path = "../sqlez" }
 async-task = "4.0.3"
 backtrace = { version = "0.3", optional = true }
 ctor = "0.1"
