--- a/crates/workspace/Cargo.toml
+++ b/crates/workspace/Cargo.toml
@@ -37,6 +37,7 @@ bincode = "1.2.1"
 anyhow = "1.0.38"
 futures = "0.3"
 lazy_static = "1.4"
+env_logger = "0.9.1"
 log = { version = "0.4.16", features = ["kv_unstable_serde"] }
 parking_lot = "0.11.1"
 postage = { version = "0.4.1", features = ["futures-traits"] }
