--- a/crates/workspace/Cargo.toml
+++ b/crates/workspace/Cargo.toml
@@ -33,6 +33,7 @@ settings = { path = "../settings" }
 sqlez = { path = "../sqlez" }
 theme = { path = "../theme" }
 util = { path = "../util" }
+async-recursion = "1.0.0"
 bincode = "1.2.1"
 anyhow = "1.0.38"
 futures = "0.3"
