--- a/crates/db/Cargo.toml
+++ b/crates/db/Cargo.toml
@@ -22,6 +22,7 @@ lazy_static = "1.4.0"
 log = { version = "0.4.16", features = ["kv_unstable_serde"] }
 parking_lot = "0.11.1"
 serde = { version = "1.0", features = ["derive"] }
+uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
 
 [dev-dependencies]
 gpui = { path = "../gpui", features = ["test-support"] }
