Add verify macros & use in one location for point conversion

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,7 @@ members = [
     "crates/theme_selector",
     "crates/theme_testbench",
     "crates/util",
+    "crates/verify",
     "crates/vim",
     "crates/workspace",
     "crates/zed",
