--- a/crates/collab/Cargo.toml
+++ b/crates/collab/Cargo.toml
@@ -36,6 +36,7 @@ prometheus = "0.13"
 rand = "0.8"
 reqwest = { version = "0.11", features = ["json"], optional = true }
 scrypt = "0.7"
+sea-orm = { version = "0.10", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
 sea-query = { version = "0.27", features = ["derive"] }
 sea-query-binder = { version = "0.2", features = ["sqlx-postgres"] }
 serde = { version = "1.0", features = ["derive", "rc"] }
@@ -74,6 +75,7 @@ env_logger = "0.9"
 log = { version = "0.4.16", features = ["kv_unstable_serde"] }
 util = { path = "../util" }
 lazy_static = "1.4"
+sea-orm = { version = "0.10", features = ["sqlx-sqlite"] }
 sea-query-binder = { version = "0.2", features = ["sqlx-sqlite"] }
 serde_json = { version = "1.0", features = ["preserve_order"] }
 sqlx = { version = "0.6", features = ["sqlite"] }
