--- a/crates/sqlez/Cargo.toml
+++ b/crates/sqlez/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 anyhow = { version = "1.0.38", features = ["backtrace"] }
 indoc = "1.0.7"
 libsqlite3-sys = { version = "0.25.2", features = ["bundled"] }
+smol = "1.2"
 thread_local = "1.1.4"
 lazy_static = "1.4"
 parking_lot = "0.11.1"
