Fix kubernetes configuration for readiness probe

--- a/crates/collab/k8s/manifest.template.yml
+++ b/crates/collab/k8s/manifest.template.yml
@@ -62,8 +62,9 @@ spec:
           readinessProbe:
             httpGet:
               path: /
-              initialDelaySeconds: 5
-              periodSeconds: 5
+              port: 8080
+            initialDelaySeconds: 5
+            periodSeconds: 5
           env:
             - name: HTTP_PORT
               value: "8080"
