WIP: failing randomized test
SEED=175 MAX_PEERS=2 ITERATIONS=1 OPERATIONS=159 cargo test --package=collab random -- --nocapture

--- a/crates/project/Cargo.toml
+++ b/crates/project/Cargo.toml
@@ -37,6 +37,7 @@ util = { path = "../util" }
 aho-corasick = "0.7"
 anyhow = "1.0.57"
 async-trait = "0.1"
+backtrace = "0.3"
 futures = "0.3"
 ignore = "0.4"
 lazy_static = "1.4.0"
