--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ members = [
     "crates/diagnostics",
     "crates/drag_and_drop",
     "crates/editor",
+    "crates/feedback",
     "crates/file_finder",
     "crates/fs",
     "crates/fsevent",
