--- a/crates/search/Cargo.toml
+++ b/crates/search/Cargo.toml
@@ -23,6 +23,7 @@ log = { version = "0.4.16", features = ["kv_unstable_serde"] }
 postage = { version = "0.4.1", features = ["futures-traits"] }
 serde = { version = "1.0", features = ["derive", "rc"] }
 smallvec = { version = "1.6", features = ["union"] }
+smol = "1.2"
 
 [dev-dependencies]
 editor = { path = "../editor", features = ["test-support"] }
