--- a/crates/feedback/Cargo.toml
+++ b/crates/feedback/Cargo.toml
@@ -13,17 +13,20 @@ test-support = []
 anyhow = "1.0.38"
 client = { path = "../client" }
 editor = { path = "../editor" }
+language = { path = "../language" }
 futures = "0.3"
 gpui = { path = "../gpui" }
 human_bytes = "0.4.1"
 isahc = "1.7"
 lazy_static = "1.4.0"
+postage = { version = "0.4", features = ["futures-traits"] }
 project = { path = "../project" }
 serde = { version = "1.0", features = ["derive", "rc"] }
 settings = { path = "../settings" }
 smallvec = { version = "1.6", features = ["union"] }
 sysinfo = "0.27.1"
 theme = { path = "../theme" }
+tree-sitter-markdown = { git = "https://github.com/MDeiml/tree-sitter-markdown", rev = "330ecab87a3e3a7211ac69bbadc19eabecdb1cca" }
 urlencoding = "2.1.2"
 util = { path = "../util" }
 workspace = { path = "../workspace" }
